--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="rounds-container">
           <div class="rounds">
             <p class="rounds-title">Round: </p>
-            <p class="rounds-number">1</p>
+            <p class="rounds-number"></p>
           </div>
             <div class="timer">
               <p class="timer-title">
                 Time left:
               </p>
-              <p class="timer-number">0:32</p>
+              <p class="timer-number"></p>
           </div>
         </div>
 
@@ -40,10 +40,8 @@
           <p class="score-title">Score</p>
           <div class="score-field">
             <p class="player-name">
-              lwvemike
             </p>
             <p class="player-score">
-              100
             </p>
           </div>
 
@@ -51,26 +49,20 @@
             <p class="player-name">
               ANTI-SCORE
             </p>
-            <p class="player-score">
-              30
+            <p class="player-score anti-score">
             </p>
           </div>
         </div>
         <div class="btn-options">
           <button class="btn next-level">Next Level</button>
           <button class="btn pause">Pause</button>
-          <button class="btn exit">Exit</button>
+          <button class="btn resume">Resume</button>
         </div>
 
 
       </div>
 
       <div class="leaderboard">
-        <p class="leaderboard-title">Leaderboard</p>
-
-        <div class="leaderboard-score-container">
-        </div>
-
       </div>
       
     </div>
